fix bug: visitor will see 404 not found error message if the first page he/she visits is not home page even though the page exists

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -8,3 +8,6 @@ a.site-title:focus, a.site-title:hover{
     padding-left: 30px;
     padding-right: 30px;
 }
+.loading-container {
+    position: relative;
+}
